- Tidy front-end templates, fix header nav responsive issues - Fix bug that returned all new players without a limit - God command fix bug with roles having whitespace - Add God roles and pantheon search pages to list Gods of each

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -115,17 +115,14 @@ main a {
     font-size: 14px;
 }
 
-.god-ability {
-    border: 1px solid grey;
-    margin-bottom: 10px;
-    padding: 5px;
-}
-
 footer .social a i {
     font-size: 24px;
 }
 
 @media (max-width: 768px) {
+    .header-box nav {
+        position: relative;
+    }
     .carousel-inner .carousel-item > div {
         display: none;
     }
